<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cs250.spring14.refill.MainActivity" >

    <item
        android:id="@+id/action_cal"
        android:icon="@drawable/ic_menu_my_calendar"
        android:orderInCategory="1"
        android:title="@string/cal"
        app:showAsAction="always"/>       
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="2"
        android:title="@string/add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_menu_overflow"
        android:orderInCategory="100"
        android:title="@string/overflow"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_doc"
                android:icon="@drawable/ic_action_doctor"
                android:title="@string/doc"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_pharm"
                android:icon="@drawable/ic_action_pharmacy"
                android:title="@string/pharm"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_patient"
                android:icon="@drawable/ic_action_patient"
                android:title="@string/pat"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_action_settings"
                android:title="@string/action_settings"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>